add future goal

--- a/README.adoc
+++ b/README.adoc
@@ -4,6 +4,8 @@ This is a web-browser only proof-of concent for an editor.
 The editor runs in the browser and reads/writes to GitHub via API.
 It shows all changes in a live preview.
 
+**Future Goal of this editor:** Guide users to make changes to the documentation up to the point where they create a pull request.
+
 == How to use
 
 Go to https://asciidoc-editor.ahus1.de/ and follow the instructions.
