--- a/public/start.adoc
+++ b/public/start.adoc
@@ -10,6 +10,6 @@ To save your changes, you'll need to log in to GitHub with your account.
 This editor is available as open source. Have a look at https://github.com/ahus1/asciidoc-editor[it's GitHub repository^] to create issues and to contribute.
 
 You can pass the GitHub file URL as a parameter to this app, use: +
-`\https://\.../#/edit?file=https://github.com/<owner>/<repo>/blob/<branch>/<path>`
+`++https://asciidoc-editor.ahus1.de#https://github.com/<owner>/<repo>/blob/<branch>/<path>++`
 
-link:/#/edit?file=https://github.com/ahus1/asciidoc-editor/blob/master/public/start.adoc[Click here to open this readme in the editor]
+link:/#/https://github.com/ahus1/asciidoc-editor/blob/master/public/start.adoc[Click here to open this readme in the editor]
