--- a/public/start.adoc
+++ b/public/start.adoc
@@ -15,3 +15,5 @@ You can pass the GitHub file URL as a parameter to this app, use: +
 link:/#/https://github.com/ahus1/asciidoc-editor/blob/master/public/start.adoc[Click here to open this readme in the editor]
 
 link:/#/https://github.com/asciidoctor/asciidoctor.org/blob/main/docs/_includes/asciidoc-article-template.adoc[Click here to open an AsciiDoc article template]
+
+link:/#/scratch?name=general[Click here for a general collaboration session]
